--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,35 @@ on:
       - created
 
 jobs:
+  commit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: master
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+
+      - name: Get Version
+        run: echo "RELEASE_VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
+      - name: Update Version
+        shell: bash
+        run: |
+          set -x
+          sed -i "s/version: .*/version: ${RELEASE_VERSION}/" snap/snapcraft.yaml
+          git add version.go snap/snapcraft.yaml
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions"
+          git commit -m "Release $RELEASE_VERSION"
+          git tag "$RELEASE_VERSION" --force
+          git push --atomic --force origin master "$RELEASE_VERSION"  
+
   binary:
+    needs: [commit]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -28,6 +56,7 @@ jobs:
         run: npx zx .github/workflows/release.mjs
 
   snap:
+    needs: [commit]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -49,6 +78,7 @@ jobs:
           release: stable
 
   brew:
+    needs: [commit]
     runs-on: macos-latest
     steps:
       - name: Set up Homebrew
