--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,8 +1,11 @@
 name: llama
-name: llama
 adopt-info: llama
-summary: Terminal JSON viewer
-description: Terminal JSON viewer
+summary: A terminal file manager
+description: | 
+  Why another file manager? I wanted something simple and minimalistic. Something to help me with faster navigation in the filesystem; 
+  a cd and ls replacement. So I build "llama". It allows for quick navigation with fuzzy searching. cd integration is quite simple. 
+  And you can open vim right from the llama. That's it. As simple and dumb as a llama.
+  
 base: core20
 grade: stable
 confinement: strict
