--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,8 +73,9 @@ jobs:
         id: build
 
       - uses: snapcore/action-publish@v1
+        env:
+          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.STORE_LOGIN }}
         with:
-          store_login: ${{ secrets.STORE_LOGIN }}
           snap: ${{ steps.build.outputs.snap }}
           release: stable
 
