--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -1,4 +1,4 @@
-name: release
+name: brew
 
 on:
   release:
@@ -8,7 +8,6 @@ on:
 
 jobs:
   brew:
-    needs: [commit]
     runs-on: macos-latest
     steps:
       - name: Set up Homebrew
@@ -16,14 +15,6 @@ jobs:
         uses: Homebrew/actions/setup-homebrew@master
         with:
           test-bot: false
-
-      - name: Cache Homebrew Bundler RubyGems
-        id: cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.set-up-homebrew.outputs.gems-path }}
-          key: ${{ runner.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
-          restore-keys: ${{ runner.os }}-rubygems-
 
       - name: Install Homebrew Bundler RubyGems
         if: steps.cache.outputs.cache-hit != 'true'
